------------------------

To be released as 0.12pre2, 0.12rc1, or even 0.12.0.  This branch
generally also includes the bug fixes made in ELinks 0.11.4.GIT.

Bugs that should be removed from NEWS before the 0.12.0 release:

* bug 955: Reset buttons no longer run FORM/@onsubmit, and
  ``harmless'' buttons no longer submit the form.  ELinks 0.12pre1
  was the first release that had these bugs.

ELinks 0.12pre1:
----------------

Released on 2008-07-01.  This release also included all the bug fixes
of ELinks 0.11.4.

Notable new features:

* enhancement 822: UTF-8 as terminal charset, not merely UTF-8 I/O
  of a unibyte codepage as in previous versions.  Double-cell (aka
  fullwidth) and supplementary characters work too, but combining
  characters and right-to-left text do not.  The only multibyte
  charset ELinks can decode is still UTF-8, so if the server outputs
  e.g. Shift-JIS, you'd better recode with a proxy.  See more notes
  in features.conf.
* enhancement 844: SMB protocol using libsmbclient.  This replaces
  the smbclient-based code that was disabled in ELinks 0.11.2.

Incompatibilities:

* ECMAScript support is now disabled by default.  It has known
  bugs 548 and 771 with which malicious web pages can hang ELinks,
  and its security goals are undocumented.  If you must enable
  ECMAScript support, it would be prudent to restrict the ELinks
  process with a sandbox of some kind.
* ECMAScript support no longer works with SpiderMonkey versions
  earlier than JS1.5 RC3a.
* Gzip decompression support now requires zlib 1.2.0.2 or later.
* bugs 871, 752: The numbering of terminal.*.colors no longer depends
  on config options.  This change makes elinks.conf portable between
  different configurations but unfortunately not between this and
  previous versions.
* Changed Python goto_url_hook(current) to goto_url_hook(new).  The
  hook can call the new function elinks.current_url() if desired.
  The Python scripting back-end is much more featureful than in